2013-06-03 Deng Pang <DengPang@rst.ricoh.com>
      * db/source/PPD/Gestetner/PS/Gestetner-MP_2001_PS.ppd,
        db/source/PPD/Gestetner/PXL/Gestetner-MP_2001_PXL.ppd,
        db/source/printer/Gestetner-MP_2001.xml,
        db/source/PPD/Gestetner/PS/Gestetner-MP_2501_PS.ppd,
        db/source/PPD/Gestetner/PXL/Gestetner-MP_2501_PXL.ppd,
        db/source/printer/Gestetner-MP_2501.xml,
        db/source/PPD/Lanier/PS/Lanier-MP_2001_PS.ppd,
        db/source/PPD/Lanier/PXL/Lanier-MP_2001_PXL.ppd,
        db/source/printer/Lanier-MP_2001.xml,
        db/source/PPD/Lanier/PS/Lanier-MP_2501_PS.ppd,
        db/source/PPD/Lanier/PXL/Lanier-MP_2501_PXL.ppd,
        db/source/printer/Lanier-MP_2501.xml,
        db/source/PPD/Lanier/PS/Lanier-SP_C730DN_PS.ppd,
        db/source/printer/Lanier-SP_C730DN.xml,
        db/source/PPD/NRG/PS/NRG-MP_2001_PS.ppd,
        db/source/PPD/NRG/PXL/NRG-MP_2001_PXL.ppd,
        db/source/printer/NRG-MP_2001.xml,
        db/source/PPD/NRG/PS/NRG-MP_2501_PS.ppd,
        db/source/PPD/NRG/PXL/NRG-MP_2501_PXL.ppd,
        db/source/printer/NRG-MP_2501.xml,
        db/source/PPD/NRG/PS/NRG-SP_C730DN_PS.ppd,
        db/source/printer/NRG-SP_C730DN.xml,
        db/source/PPD/Ricoh/PS/Ricoh-Aficio_SP_C730DN_PS.ppd,
        db/source/printer/Ricoh-Aficio_SP_C730DN.xml,
        db/source/PPD/Ricoh/PS/Ricoh-MP_2001_PS.ppd,
        db/source/PPD/Ricoh/PXL/Ricoh-MP_2001_PXL.ppd,
        db/source/printer/Ricoh-MP_2001.xml,
        db/source/PPD/Ricoh/PS/Ricoh-MP_2501_PS.ppd,
        db/source/PPD/Ricoh/PXL/Ricoh-MP_2501_PXL.ppd,
        db/source/printer/Ricoh-MP_2501.xml,
        db/source/PPD/Savin/PS/Savin-MP_2501_PS.ppd,
        db/source/PPD/Savin/PXL/Savin-MP_2501_PXL.ppd,
        db/source/printer/Savin-MP_2501.xml,
        db/source/PPD/Savin/PS/Savin-SP_C730DN_PS.ppd,
        db/source/printer/Savin-SP_C730DN.xml,
        db/source/PPD/Infotec/PS/Infotec-MP_2001_PS.ppd,
        db/source/PPD/Infotec/PXL/Infotec-MP_2001_PXL.ppd,