@@ -1,0 +1,37 @@
+<printer id="printer/Epson-XP-410_Series">
+  <make>Epson</make>
+  <model>XP-410 Series</model>
+  <mechanism>
+    <inkjet />
+    <color />
+    <resolution>
+      <dpi>
+        <x>5760</x>
+        <y>1440</y>
+      </dpi>
+    </resolution>
+  </mechanism>
+  <url>http://www.epson.com/</url>
+  <autodetect>
+    <general>
+      <ieee1284>MFG:EPSON;CMD:ESCPL2,BDC,D4,D4PX,ESCPR2;MDL:XP-410 Series;CLS:PRINTER;DES:EPSON XP-410 Series</ieee1284>
+      <commandset>ESCPL2,BDC,D4,D4PX,ESCPR2</commandset>
+      <description>EPSON XP-410 Series</description>
+      <manufacturer>EPSON</manufacturer>
+      <model>XP-410 Series</model>
+    </general>
+  </autodetect>
+  <functionality>A</functionality>
+  <driver>epson-201303w</driver>
+  <drivers>
+    <driver>
+      <id>epson-201303w</id>
+    </driver>
+ </drivers>
+  <comments>
+    <en>
+      Epson color inkjet printer.&lt;p&gt;
+      Maximum paper width: 21.0 cm / 8.3 inches&lt;p&gt;
+    </en>
+  </comments>
+</printer>
