@@ -1,3 +1,12 @@
+2013-06-05  Seiko Epson Corporation <linux-printer@epson.jp>
+        * db/source/printer/Epson-XP-211_214_216_Series.xml,
+          db/source/printer/Epson-XP-310_Series.xml,
+          db/source/printer/Epson-XP-410_Series.xml,
+          db/source/printer/Epson-XP-212_213_Series.xml,
+          db/source/printer/Epson-XP-215_217_Series.xml,
+          db/source/printer/Epson-XP-312_313_315_Series.xml,
+          db/source/printer/Epson-XP-412_413_415_Series.xml:added XML files for 7 new printers.
+
 2013-06-03 Deng Pang <DengPang@rst.ricoh.com>
       * db/source/PPD/Gestetner/PS/Gestetner-MP_2001_PS.ppd,
         db/source/PPD/Gestetner/PXL/Gestetner-MP_2001_PXL.ppd,
